...
                    height: 20,
                    child: AnimatedOpacity(
                      duration: CoreDelay().quick,
                      opacity: state.search.visibility ? 1 : 0,
                      child: const CoreIcon.medium(
                        icon: Icons.search,
                        semanticLabel: "search",
                      ),
                    ),
                  ),
                  AnimatedPositioned(
                    left: state.cursor.leftPosition,
                    bottom: state.cursor.bottomPosition,
...
